<?xml version="1.0" encoding="utf-8"?>
<com.example.bottomsheetapptest.MaxHeightLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <View
        android:id="@+id/view_swipe_indicator"
        android:layout_width="@dimen/ar_swipe_indicator_width"
        android:layout_height="@dimen/ar_swipe_indicator_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:background="@drawable/rounded_corners" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/details_container_one"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ar_onboarding_button_margin"
                android:layout_marginTop="@dimen/ar_onboarding_image_margin"
                android:layout_marginEnd="@dimen/ar_onboarding_image_number_margin"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ar_onboarding_image_number_one"
                app:layout_constraintTop_toBottomOf="@+id/onboarding_image">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ar_bag_onboarding_message_title_one"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ar_bag_onboarding_message_content_one"
                    android:textColor="@color/colorBlack" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/details_container_two"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ar_onboarding_button_margin"
                android:layout_marginTop="@dimen/ar_onboarding_image_margin"
                android:layout_marginEnd="@dimen/ar_onboarding_image_number_margin"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ar_onboarding_image_number_one"
                app:layout_constraintTop_toBottomOf="@+id/details_container_one">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ar_bag_onboarding_message_title_two"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ar_bag_onboarding_message_content_two"
                    android:textColor="@color/colorBlack" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/details_container_three"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ar_onboarding_button_margin"
                android:layout_marginTop="@dimen/ar_onboarding_image_margin"
                android:layout_marginEnd="@dimen/ar_onboarding_image_number_margin"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ar_onboarding_image_number_one"
                app:layout_constraintTop_toBottomOf="@+id/details_container_two">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ar_bag_onboarding_message_title_three"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/ar_bag_onboarding_message_content_three"
                    android:textColor="@color/colorBlack" />

            </LinearLayout>

            <TextView
                android:id="@+id/get_started_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ar_bag_onboarding_title"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/onboarding_image"
                android:layout_width="@dimen/ar_onboarding_image_size"
                android:layout_height="@dimen/ar_onboarding_image_size"
                android:layout_marginTop="@dimen/ar_onboarding_image_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/get_started_message"
                app:srcCompat="@drawable/ar_onboarding_image" />

            <ImageView
                android:id="@+id/ar_onboarding_image_number_one"
                android:layout_width="@dimen/ar_onboarding_image_number_size"
                android:layout_height="@dimen/ar_onboarding_image_number_size"
                android:layout_marginStart="@dimen/ar_onboarding_image_number_margin"
                android:layout_marginTop="@dimen/ar_onboarding_image_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/onboarding_image"
                app:srcCompat="@drawable/ar_onboarding_image_number_one" />

            <ImageView
                android:id="@+id/ar_onboarding_image_number_three"
                android:layout_width="@dimen/ar_onboarding_image_number_size"
                android:layout_height="@dimen/ar_onboarding_image_number_size"
                android:layout_marginStart="@dimen/ar_onboarding_image_number_margin"
                android:layout_marginTop="@dimen/ar_onboarding_image_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details_container_two"
                app:srcCompat="@drawable/ar_onboarding_image_number_three" />

            <ImageView
                android:id="@+id/ar_onboarding_image_number_two"
                android:layout_width="@dimen/ar_onboarding_image_number_size"
                android:layout_height="@dimen/ar_onboarding_image_number_size"
                android:layout_marginStart="@dimen/ar_onboarding_image_number_margin"
                android:layout_marginTop="@dimen/ar_onboarding_image_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details_container_one"
                app:srcCompat="@drawable/ar_onboarding_image_number_two" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


    <Button
        android:id="@+id/got_it_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="@dimen/ar_onboarding_image_margin"
        android:layout_marginTop="@dimen/ar_onboarding_image_margin"
        android:layout_marginEnd="@dimen/ar_onboarding_button_margin"
        android:layout_marginBottom="@dimen/ar_onboarding_image_margin"
        android:text="@string/ar_bag_onboarding_confirm_button_title"
        tools:text="Got it" />

</com.example.bottomsheetapptest.MaxHeightLinearLayout>
